Mobile layout update

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -8726,6 +8726,26 @@
             "6fc6ea76"
           ],
           "type": "sass"
+        },
+        "e30d782f": {
+          "id": "e30d782f",
+          "path": "sass/pages/_page-portfolio.sass",
+          "output": "css/pages/_page-portfolio.css",
+          "name": "_page-portfolio.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
