Small design updates

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -8329,7 +8329,7 @@
           "output": "css/_font-awesome.css",
           "name": "_font-awesome.sass",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -8415,7 +8415,7 @@
           "output": "css/modules/_breadcrumbs.css",
           "name": "_breadcrumbs.sass",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -8432,26 +8432,6 @@
           "path": "sass/modules/_card.sass",
           "output": "css/modules/_card.css",
           "name": "_card.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "6fc6ea76"
-          ],
-          "type": "sass"
-        },
-        "b73376e6": {
-          "id": "b73376e6",
-          "path": "sass/modules/_fonts.sass",
-          "output": "css/modules/_fonts.css",
-          "name": "_fonts.sass",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -8746,6 +8726,154 @@
             "6fc6ea76"
           ],
           "type": "sass"
+        },
+        "1ed675a0": {
+          "id": "1ed675a0",
+          "path": "sass/modules/_fonts.scss",
+          "output": "css/modules/_fonts.css",
+          "name": "_fonts.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": false,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
+          "type": "sass"
+        },
+        "916ed701": {
+          "id": "916ed701",
+          "path": "src/font-awesome/css/mixins.css",
+          "output": "src/font-awesome/css/mixins-dist.css",
+          "name": "mixins.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "8f2d0cd0": {
+          "id": "8f2d0cd0",
+          "path": "src/font-awesome/css/variables.css",
+          "output": "src/font-awesome/css/variables-dist.css",
+          "name": "variables.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "6d83e55d": {
+          "id": "6d83e55d",
+          "path": "src/bootstrap/scss/bootstrap-reboot.css",
+          "output": "src/bootstrap/scss/bootstrap-reboot-dist.css",
+          "name": "bootstrap-reboot.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "776d8037": {
+          "id": "776d8037",
+          "path": "src/bootstrap/docs/assets/scss/docs.css",
+          "output": "src/bootstrap/docs/assets/scss/docs-dist.css",
+          "name": "docs.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "11d9250f": {
+          "id": "11d9250f",
+          "path": "src/font-awesome/scss/font-awesome.css",
+          "output": "src/font-awesome/scss/font-awesome-dist.css",
+          "name": "font-awesome.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "c42e9c94": {
+          "id": "c42e9c94",
+          "path": "src/bootstrap/scss/bootstrap-grid.css",
+          "output": "src/bootstrap/scss/bootstrap-grid-dist.css",
+          "name": "bootstrap-grid.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "51c8335f": {
+          "id": "51c8335f",
+          "path": "src/bootstrap/scss/bootstrap-flex.css",
+          "output": "src/bootstrap/scss/bootstrap-flex-dist.css",
+          "name": "bootstrap-flex.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "f6916459": {
+          "id": "f6916459",
+          "path": "src/bootstrap/scss/bootstrap.css",
+          "output": "src/bootstrap/scss/bootstrap-dist.css",
+          "name": "bootstrap.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
