--- a/prepros.cfg
+++ b/prepros.cfg
@@ -596,7 +596,7 @@
           "sourceMaps": true,
           "libSass": true,
           "compass": false,
-          "fullCompass": true,
+          "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": true,
           "imported": false,
@@ -3210,8 +3210,8 @@
           "parents": [
             "6fa66231",
             "639f4466",
-            "6fc6ea76",
-            "eefe69cc"
+            "eefe69cc",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
