Transformed mobile menu into jQuery plugin
Moved mobile menu jQuery code into separate file and transformed it into
a jQuery plugin

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -8874,6 +8874,22 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "5ecbec25": {
+          "id": "5ecbec25",
+          "path": "js/jquery-mdstrap.js",
+          "output": "js/jquery-mdstrap-dist.js",
+          "name": "jquery-mdstrap.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
