Updated mobile menu

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2592,6 +2592,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
+            "6fc6ea76",
             "eb09ce6d"
           ],
           "type": "sass"
@@ -2613,6 +2614,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
+            "6fc6ea76",
             "eb09ce6d"
           ],
           "type": "sass"
@@ -2634,6 +2636,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
+            "6fc6ea76",
             "eb09ce6d"
           ],
           "type": "sass"
@@ -2655,6 +2658,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
+            "6fc6ea76",
             "eb09ce6d"
           ],
           "type": "sass"
@@ -2676,6 +2680,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
+            "6fc6ea76",
             "eb09ce6d"
           ],
           "type": "sass"
@@ -2697,6 +2702,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
+            "6fc6ea76",
             "eb09ce6d"
           ],
           "type": "sass"
@@ -2718,6 +2724,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
+            "6fc6ea76",
             "eb09ce6d"
           ],
           "type": "sass"
@@ -2739,6 +2746,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
+            "6fc6ea76",
             "eb09ce6d"
           ],
           "type": "sass"
@@ -2760,7 +2768,8 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d"
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2781,6 +2790,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
+            "6fc6ea76",
             "eb09ce6d"
           ],
           "type": "sass"
@@ -2802,6 +2812,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
+            "6fc6ea76",
             "eb09ce6d"
           ],
           "type": "sass"
@@ -2823,7 +2834,7 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d"
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -2844,7 +2855,8 @@
           "imported": true,
           "parents": [
             "fa29e6af",
-            "eb09ce6d"
+            "eb09ce6d",
+            "6fc6ea76"
           ],
           "type": "sass"
         },
@@ -8337,8 +8349,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "6fc6ea76"
+          ],
           "type": "sass"
         },
         "5a8b0f76": {
