--- a/prepros.cfg
+++ b/prepros.cfg
@@ -8889,10 +8889,25 @@
           "parents": [],
           "type": "css"
         },
-        "5ecbec25": {
-          "id": "5ecbec25",
-          "path": "js/jquery-mdstrap.js",
-          "output": "js/jquery-mdstrap-dist.js",
+        "679a9f86": {
+          "id": "679a9f86",
+          "path": "libs/mdstrap/README.md",
+          "output": "libs/mdstrap/README.html",
+          "name": "README.md",
+          "category": "HTML",
+          "autoCompile": true,
+          "sanitize": false,
+          "gfm": true,
+          "wrapWithHtml": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "markdown"
+        },
+        "9579b8f5": {
+          "id": "9579b8f5",
+          "path": "libs/mdstrap/jquery-mdstrap.js",
+          "output": "libs/mdstrap/jquery-mdstrap-dist.js",
           "name": "jquery-mdstrap.js",
           "category": "JS",
           "autoCompile": false,
