--- a/prepros.cfg
+++ b/prepros.cfg
@@ -8933,7 +8933,7 @@
         "useCustomServer": true,
         "port": 8080,
         "useCustomPort": true,
-        "customServerUrl": "http://dekon.go.ro/cc",
+        "customServerUrl": "http://localhost/cc",
         "watchedFileExtensions": "less, sass, scss, styl, md, markdown, coffee, js, jade, haml, slim, ls, html,htm, css, rb, php, asp, aspx, cfm, chm, cms, do, erb, jsp, mhtml, mspx, pl, py, shtml, cshtml, cs,vb, vbs, tpl, ctp, kit, png, jpg, jpeg",
         "excludePatterns": "Prepros Build, node_modules, .git, .idea, .sass-cache, .hg, .svn, .cache, config.rb, prepros.cfg, .DS_Store, bower_components",
         "autoprefixerBrowsers": "last 4 versions",
