Updated blog section

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -209,24 +209,6 @@
           ],
           "type": "sass"
         },
-        "99180695": {
-          "id": "99180695",
-          "path": "css/pages/_page-blog.sass",
-          "output": "css/pages/_page-blog.css",
-          "name": "_page-blog.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
         "e9a5932f": {
           "id": "e9a5932f",
           "path": "404.php",
@@ -321,9 +303,9 @@
           "output": "CHANGELOG.html",
           "name": "CHANGELOG.md",
           "category": "HTML",
-          "autoCompile": true,
+          "autoCompile": false,
           "sanitize": false,
-          "gfm": true,
+          "gfm": false,
           "wrapWithHtml": false,
           "customOutput": false,
           "imported": false,
@@ -336,9 +318,9 @@
           "output": "README.html",
           "name": "README.md",
           "category": "HTML",
-          "autoCompile": true,
+          "autoCompile": false,
           "sanitize": false,
-          "gfm": true,
+          "gfm": false,
           "wrapWithHtml": false,
           "customOutput": false,
           "imported": false,
@@ -4519,78 +4501,6 @@
           ],
           "type": "sass"
         },
-        "99dd0793": {
-          "id": "99dd0793",
-          "path": "css/modules/_navbar.sass",
-          "output": "css/modules/_navbar.css",
-          "name": "_navbar.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "04a61d68": {
-          "id": "04a61d68",
-          "path": "css/pages/_page-portfolio.sass",
-          "output": "css/pages/_page-portfolio.css",
-          "name": "_page-portfolio.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "ff381688": {
-          "id": "ff381688",
-          "path": "css/pages/_page-services.sass",
-          "output": "css/pages/_page-services.css",
-          "name": "_page-services.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "3f321f4a": {
-          "id": "3f321f4a",
-          "path": "css/pages/_page-single.sass",
-          "output": "css/pages/_page-single.css",
-          "name": "_page-single.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
         "19d83168": {
           "id": "19d83168",
           "path": "functions/custom-fields.php",
@@ -4934,6 +4844,78 @@
             "639f4466",
             "d1a5d849"
           ],
+          "type": "sass"
+        },
+        "04a61d68": {
+          "id": "04a61d68",
+          "path": "css/pages/_page-portfolio.sass",
+          "output": "css/pages/_page-portfolio.css",
+          "name": "_page-portfolio.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "3f321f4a": {
+          "id": "3f321f4a",
+          "path": "css/pages/_page-single.sass",
+          "output": "css/pages/_page-single.css",
+          "name": "_page-single.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "ff381688": {
+          "id": "ff381688",
+          "path": "css/pages/_page-services.sass",
+          "output": "css/pages/_page-services.css",
+          "name": "_page-services.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "99dd0793": {
+          "id": "99dd0793",
+          "path": "css/modules/_navbar.sass",
+          "output": "css/modules/_navbar.css",
+          "name": "_navbar.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
           "type": "sass"
         }
       },
