--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ bh_unicode_properties.cache
 
 # Sublime-github package stores a github token in this file
 # https://packagecontrol.io/packages/sublime-github
-GitHub.sublime-settings
-prepros.cfg
+# GitHub.sublime-settings
+*.cfg
