--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1030,6 +1030,10 @@
     {
       "path": "css/modules/_ie-no-flexbox.sass",
       "configJson": "{\"compiler-sass\":{\"path\":\"css/modules/_ie-no-flexbox.sass\",\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"},\"autoCompile\":false,\"compiler-autoprefixer\":{\"enabled\":false},\"sourceMap\":false,\"customOutput\":\"css/modules/_ie-no-flexbox.css\"}"
+    },
+    {
+      "path": "css/amp.sass",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-sass\":{\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}"
     }
   ],
   "fileTree": {
@@ -1046,7 +1050,7 @@
       "prepros-6.config",
       "Prepros Export"
     ],
-    "hideUnwatchedFiles": false
+    "hideUnwatchedFiles": true
   },
   "imports": [
     {
@@ -1054,23 +1058,23 @@
       "imports": [
         "css/_bootstrap.sass",
         "css/_font-awesome.sass",
-        "css/_base.sass",
-        "bower_components/jquery-mdstrap/css/_jquery-mdstrap.sass",
-        "css/modules/_keyframes.sass",
-        "css/modules/_grid.sass",
-        "css/modules/_fonts.scss",
-        "css/modules/_typography.sass",
-        "css/modules/_header.sass",
-        "css/modules/_breadcrumbs.sass",
-        "css/modules/_social.sass",
-        "css/modules/_buttons.sass",
-        "css/modules/_card.sass",
-        "css/modules/_footer.sass",
-        "css/modules/_inputs.sass",
+        "css/layout/_container.sass",
+        "css/layout/_grid.sass",
+        "css/layout/_header.sass",
+        "css/layout/_footer.sass",
+        "css/layout/_card.sass",
+        "css/components/_keyframes.sass",
+        "css/components/_fonts.scss",
+        "css/components/_typography.sass",
+        "css/components/_breadcrumbs.sass",
+        "css/components/_social.sass",
+        "css/components/_buttons.sass",
+        "css/components/_inputs.sass",
+        "css/components/tags.sass",
         "css/pages/_page-about.sass",
         "css/pages/_page-contact.sass",
-        "css/pages/_single-website.sass",
         "css/pages/_page-single.sass",
+        "css/pages/_portfolio-website.sass",
         "bower_components/bootstrap/scss/_variables.scss",
         "bower_components/bootstrap/scss/_mixins.scss",
         "bower_components/bootstrap/scss/_custom.scss",
@@ -1085,7 +1089,7 @@
         "bower_components/bootstrap/scss/_tables.scss",
         "bower_components/bootstrap/scss/_forms.scss",
         "bower_components/bootstrap/scss/_buttons.scss",
-        "bower_components/bootstrap/scss/_animation.scss",
+        "bower_components/bootstrap/scss/_transitions.scss",
         "bower_components/bootstrap/scss/_dropdown.scss",
         "bower_components/bootstrap/scss/_button-group.scss",
         "bower_components/bootstrap/scss/_input-group.scss",
@@ -1095,7 +1099,7 @@
         "bower_components/bootstrap/scss/_card.scss",
         "bower_components/bootstrap/scss/_breadcrumb.scss",
         "bower_components/bootstrap/scss/_pagination.scss",
-        "bower_components/bootstrap/scss/_tags.scss",
+        "bower_components/bootstrap/scss/_badge.scss",
         "bower_components/bootstrap/scss/_jumbotron.scss",
         "bower_components/bootstrap/scss/_alert.scss",
         "bower_components/bootstrap/scss/_progress.scss",
@@ -1121,20 +1125,19 @@
         "bower_components/components-font-awesome/scss/_stacked.scss",
         "bower_components/components-font-awesome/scss/_icons.scss",
         "bower_components/components-font-awesome/scss/_screen-reader.scss",
-        "css/modules/_ie-no-flexbox.sass",
         "bower_components/bootstrap/scss/mixins/_breakpoints.scss",
         "bower_components/bootstrap/scss/mixins/_hover.scss",
         "bower_components/bootstrap/scss/mixins/_image.scss",
-        "bower_components/bootstrap/scss/mixins/_tag.scss",
-        "bower_components/bootstrap/scss/mixins/_reset-filter.scss",
+        "bower_components/bootstrap/scss/mixins/_badge.scss",
         "bower_components/bootstrap/scss/mixins/_resize.scss",
         "bower_components/bootstrap/scss/mixins/_screen-reader.scss",
         "bower_components/bootstrap/scss/mixins/_size.scss",
-        "bower_components/bootstrap/scss/mixins/_tab-focus.scss",
         "bower_components/bootstrap/scss/mixins/_reset-text.scss",
         "bower_components/bootstrap/scss/mixins/_text-emphasis.scss",
         "bower_components/bootstrap/scss/mixins/_text-hide.scss",
         "bower_components/bootstrap/scss/mixins/_text-truncate.scss",
+        "bower_components/bootstrap/scss/mixins/_transforms.scss",
+        "bower_components/bootstrap/scss/mixins/_visibility.scss",
         "bower_components/bootstrap/scss/mixins/_alert.scss",
         "bower_components/bootstrap/scss/mixins/_buttons.scss",
         "bower_components/bootstrap/scss/mixins/_cards.scss",
@@ -1143,7 +1146,6 @@
         "bower_components/bootstrap/scss/mixins/_list-group.scss",
         "bower_components/bootstrap/scss/mixins/_nav-divider.scss",
         "bower_components/bootstrap/scss/mixins/_forms.scss",
-        "bower_components/bootstrap/scss/mixins/_progress.scss",
         "bower_components/bootstrap/scss/mixins/_table-row.scss",
         "bower_components/bootstrap/scss/mixins/_background-variant.scss",
         "bower_components/bootstrap/scss/mixins/_border-radius.scss",
@@ -1161,26 +1163,141 @@
         "bower_components/bootstrap/scss/utilities/_display.scss",
         "bower_components/bootstrap/scss/utilities/_flex.scss",
         "bower_components/bootstrap/scss/utilities/_float.scss",
+        "bower_components/bootstrap/scss/utilities/_position.scss",
         "bower_components/bootstrap/scss/utilities/_screenreaders.scss",
+        "bower_components/bootstrap/scss/utilities/_sizing.scss",
         "bower_components/bootstrap/scss/utilities/_spacing.scss",
         "bower_components/bootstrap/scss/utilities/_text.scss",
         "bower_components/bootstrap/scss/utilities/_visibility.scss"
       ]
     },
     {
+      "path": "css/_bootstrap.sass",
+      "imports": [
+        "bower_components/bootstrap/scss/_variables.scss",
+        "bower_components/bootstrap/scss/_mixins.scss",
+        "bower_components/bootstrap/scss/_custom.scss",
+        "css/_variables.sass",
+        "bower_components/bootstrap/scss/_normalize.scss",
+        "bower_components/bootstrap/scss/_print.scss",
+        "bower_components/bootstrap/scss/_reboot.scss",
+        "bower_components/bootstrap/scss/_type.scss",
+        "bower_components/bootstrap/scss/_images.scss",
+        "bower_components/bootstrap/scss/_code.scss",
+        "bower_components/bootstrap/scss/_grid.scss",
+        "bower_components/bootstrap/scss/_tables.scss",
+        "bower_components/bootstrap/scss/_forms.scss",
+        "bower_components/bootstrap/scss/_buttons.scss",
+        "bower_components/bootstrap/scss/_transitions.scss",
+        "bower_components/bootstrap/scss/_dropdown.scss",
+        "bower_components/bootstrap/scss/_button-group.scss",
+        "bower_components/bootstrap/scss/_input-group.scss",
+        "bower_components/bootstrap/scss/_custom-forms.scss",
+        "bower_components/bootstrap/scss/_nav.scss",
+        "bower_components/bootstrap/scss/_navbar.scss",
+        "bower_components/bootstrap/scss/_card.scss",
+        "bower_components/bootstrap/scss/_breadcrumb.scss",
+        "bower_components/bootstrap/scss/_pagination.scss",
+        "bower_components/bootstrap/scss/_badge.scss",
+        "bower_components/bootstrap/scss/_jumbotron.scss",
+        "bower_components/bootstrap/scss/_alert.scss",
+        "bower_components/bootstrap/scss/_progress.scss",
+        "bower_components/bootstrap/scss/_media.scss",
+        "bower_components/bootstrap/scss/_list-group.scss",
+        "bower_components/bootstrap/scss/_responsive-embed.scss",
+        "bower_components/bootstrap/scss/_close.scss",
+        "bower_components/bootstrap/scss/_modal.scss",
+        "bower_components/bootstrap/scss/_tooltip.scss",
+        "bower_components/bootstrap/scss/_popover.scss",
+        "bower_components/bootstrap/scss/_carousel.scss",
+        "bower_components/bootstrap/scss/_utilities.scss",
+        "bower_components/bootstrap/scss/mixins/_breakpoints.scss",
+        "bower_components/bootstrap/scss/mixins/_hover.scss",
+        "bower_components/bootstrap/scss/mixins/_image.scss",
+        "bower_components/bootstrap/scss/mixins/_badge.scss",
+        "bower_components/bootstrap/scss/mixins/_resize.scss",
+        "bower_components/bootstrap/scss/mixins/_screen-reader.scss",
+        "bower_components/bootstrap/scss/mixins/_size.scss",
+        "bower_components/bootstrap/scss/mixins/_reset-text.scss",
+        "bower_components/bootstrap/scss/mixins/_text-emphasis.scss",
+        "bower_components/bootstrap/scss/mixins/_text-hide.scss",
+        "bower_components/bootstrap/scss/mixins/_text-truncate.scss",
+        "bower_components/bootstrap/scss/mixins/_transforms.scss",
+        "bower_components/bootstrap/scss/mixins/_visibility.scss",
+        "bower_components/bootstrap/scss/mixins/_alert.scss",
+        "bower_components/bootstrap/scss/mixins/_buttons.scss",
+        "bower_components/bootstrap/scss/mixins/_cards.scss",
+        "bower_components/bootstrap/scss/mixins/_pagination.scss",
+        "bower_components/bootstrap/scss/mixins/_lists.scss",
+        "bower_components/bootstrap/scss/mixins/_list-group.scss",
+        "bower_components/bootstrap/scss/mixins/_nav-divider.scss",
+        "bower_components/bootstrap/scss/mixins/_forms.scss",
+        "bower_components/bootstrap/scss/mixins/_table-row.scss",
+        "bower_components/bootstrap/scss/mixins/_background-variant.scss",
+        "bower_components/bootstrap/scss/mixins/_border-radius.scss",
+        "bower_components/bootstrap/scss/mixins/_gradients.scss",
+        "bower_components/bootstrap/scss/mixins/_clearfix.scss",
+        "bower_components/bootstrap/scss/mixins/_navbar-align.scss",
+        "bower_components/bootstrap/scss/mixins/_grid-framework.scss",
+        "bower_components/bootstrap/scss/mixins/_grid.scss",
+        "bower_components/bootstrap/scss/mixins/_float.scss",
+        "bower_components/bootstrap/scss/bootstrap.scss",
+        "bower_components/bootstrap/scss/utilities/_align.scss",
+        "bower_components/bootstrap/scss/utilities/_background.scss",
+        "bower_components/bootstrap/scss/utilities/_borders.scss",
+        "bower_components/bootstrap/scss/utilities/_clearfix.scss",
+        "bower_components/bootstrap/scss/utilities/_display.scss",
+        "bower_components/bootstrap/scss/utilities/_flex.scss",
+        "bower_components/bootstrap/scss/utilities/_float.scss",
+        "bower_components/bootstrap/scss/utilities/_position.scss",
+        "bower_components/bootstrap/scss/utilities/_screenreaders.scss",
+        "bower_components/bootstrap/scss/utilities/_sizing.scss",
+        "bower_components/bootstrap/scss/utilities/_spacing.scss",
+        "bower_components/bootstrap/scss/utilities/_text.scss",
+        "bower_components/bootstrap/scss/utilities/_visibility.scss"
+      ]
+    },
+    {
+      "path": "css/_font-awesome.sass",
+      "imports": [
+        "bower_components/components-font-awesome/scss/_variables.scss",
+        "bower_components/components-font-awesome/scss/_mixins.scss",
+        "bower_components/components-font-awesome/scss/_path.scss",
+        "bower_components/components-font-awesome/scss/_core.scss",
+        "bower_components/components-font-awesome/scss/_larger.scss",
+        "bower_components/components-font-awesome/scss/_fixed-width.scss",
+        "bower_components/components-font-awesome/scss/_list.scss",
+        "bower_components/components-font-awesome/scss/_bordered-pulled.scss",
+        "bower_components/components-font-awesome/scss/_animated.scss",
+        "bower_components/components-font-awesome/scss/_rotated-flipped.scss",
+        "bower_components/components-font-awesome/scss/_stacked.scss",
+        "bower_components/components-font-awesome/scss/_icons.scss",
+        "bower_components/components-font-awesome/scss/_screen-reader.scss"
+      ]
+    },
+    {
       "path": "js/functions.js",
       "imports": [
         "bower_components/jquery/jquery.js",
-        "bower_components/jquery-mobile-bower/js/jquery.mobile-1.4.5.js",
-        "bower_components/jquery-mdstrap/js/jquery-mdstrap.js",
+        "bower_components/jquery-mdstrap/dist/js/jquery-mdstrap.js",
         "bower_components/ev-emitter/ev-emitter.js",
         "bower_components/imagesloaded/imagesloaded.js",
         "../../../wp-includes/js/masonry.min.js"
       ]
+    },
+    {
+      "path": "css/amp.sass",
+      "imports": [
+        "bower_components/bootstrap/scss/_variables.scss",
+        "css/_variables.sass",
+        "css/components/_typography.sass",
+        "css/components/tags.sass",
+        "css/components/_social.sass"
+      ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -1250,7 +1367,7 @@
     }
   },
   "browser-sync": {
-    "enable": false,
+    "enable": true,
     "clicks": true,
     "forms": true,
     "scroll": true
@@ -1325,6 +1442,7 @@
   "file-type-livescript": "{\"autoCompile\":true,\"compiler-livescript\":{\"bare\":false,\"mangle\":true,\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":true},\"compilers\":[\"livescript\",\"uglify-js\"],\"sourceMap\":false,\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"coffee\",\"coffeescript\",\"coffeescripts\",\"ls\",\"livescript\",\"livescripts\"],\"replaceSegmentsWith\":[\"html\"],\"relative\":\"\"}}",
   "file-type-kit": "{\"autoCompile\":true,\"compiler-kit\":{\"minifyHtml\":false,\"enabled\":true},\"compilers\":[\"kit\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"jade\",\"haml\",\"slim\",\"markdown\",\"md\",\"kit\"],\"replaceSegmentsWith\":[\"html\"],\"relative\":\"\"}}",
   "uglify-js": {
+    "ie8": false,
     "compress": {
       "sequences": true,
       "properties": true,
@@ -1332,40 +1450,54 @@
       "drop_debugger": true,
       "unsafe": false,
       "unsafe_comps": false,
+      "unsafe_math": false,
+      "unsafe_proto": false,
+      "unsafe_regexp": false,
       "conditionals": true,
       "comparisons": true,
       "evaluate": true,
       "booleans": true,
       "loops": true,
       "unused": true,
+      "toplevel": false,
+      "top_retain": "",
       "hoist_funs": true,
-      "keep_fargs": false,
       "hoist_vars": false,
       "if_return": true,
       "join_vars": true,
       "cascade": true,
-      "side_effects": true,
-      "pure_getters": false,
-      "negate_iife": true,
-      "screw_ie8": false,
-      "drop_console": false,
-      "angular": false,
+      "collapse_vars": true,
+      "reduce_vars": true,
       "warnings": true,
+      "negate_iife": true,
+      "pure_getters": false,
       "pure_funcs": [],
+      "drop_console": false,
+      "expression": false,
+      "keep_fargs": false,
+      "keep_fnames": false,
+      "passes": 1,
+      "keep_infinity": false,
+      "side_effects": true,
       "global_defs": []
     },
     "output": {
-      "quote_keys": false,
-      "space_colon": true,
       "ascii_only": false,
-      "unescape_regexps": false,
-      "inline_script": false,
       "beautify": false,
       "bracketize": false,
-      "semicolons": true,
-      "comments": false,
+      "comments": "",
+      "indent_level": 4,
+      "indent_start": 0,
+      "inline_script": false,
+      "keep_quoted_props": false,
+      "max_line_len": false,
+      "preamble": "",
       "preserve_line": false,
-      "screw_ie8": false
+      "quote_keys": false,
+      "quote_style": 0,
+      "semicolons": true,
+      "shebang": true,
+      "width": 80
     }
   },
   "cssnext": {
