--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "font-awesome": "^4.7.0",
     "imagesloaded": "^4.1.4",
     "jquery": "^3.3.1",
-    "jquery-mdstrap": "^4.0.0",
-    "popper": "^1.0.1"
+    "jquery-mdstrap": "^4.0.0"
   }
 }
