--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "font-awesome": "^4.7.0",
     "imagesloaded": "^4.1.4",
     "jquery": "^3.3.1",
-    "jquery-mdstrap": "^4.0.0"
+    "jquery-mdstrap": "^4.0.1",
+    "masonry-layout": "^4.2.1",
+    "prismjs": "^1.14.0"
   }
 }
