Updated SASS files

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1126,6 +1126,10 @@
     {
       "path": "src/js/contact-form.js",
       "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"compiler-concat-js\":{\"enabled\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+    },
+    {
+      "path": "src/css/layout/_old.sass",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-sass\":{\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}"
     }
   ],
   "fileTree": {
@@ -1135,7 +1139,9 @@
       "src",
       "src/js",
       "assets",
-      "assets/css"
+      "assets/css",
+      "src/css",
+      "src/css/layout"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -1165,25 +1171,42 @@
       "imports": [
         "node_modules/bootstrap/scss/_functions.scss",
         "node_modules/bootstrap/scss/_variables.scss",
+        "node_modules/bootstrap/scss/_mixins.scss",
         "src/css/_variables.sass",
         "src/css/components/_fonts.scss",
-        "node_modules/font-awesome/scss/font-awesome.scss",
         "src/css/components/_typography.sass",
         "src/css/components/_tags.sass",
         "src/css/components/_social-media.sass",
-        "node_modules/font-awesome/scss/_variables.scss",
-        "node_modules/font-awesome/scss/_mixins.scss",
-        "node_modules/font-awesome/scss/_path.scss",
-        "node_modules/font-awesome/scss/_core.scss",
-        "node_modules/font-awesome/scss/_larger.scss",
-        "node_modules/font-awesome/scss/_fixed-width.scss",
-        "node_modules/font-awesome/scss/_list.scss",
-        "node_modules/font-awesome/scss/_bordered-pulled.scss",
-        "node_modules/font-awesome/scss/_animated.scss",
-        "node_modules/font-awesome/scss/_rotated-flipped.scss",
-        "node_modules/font-awesome/scss/_stacked.scss",
-        "node_modules/font-awesome/scss/_icons.scss",
-        "node_modules/font-awesome/scss/_screen-reader.scss"
+        "node_modules/bootstrap/scss/mixins/_breakpoints.scss",
+        "node_modules/bootstrap/scss/mixins/_hover.scss",
+        "node_modules/bootstrap/scss/mixins/_image.scss",
+        "node_modules/bootstrap/scss/mixins/_badge.scss",
+        "node_modules/bootstrap/scss/mixins/_resize.scss",
+        "node_modules/bootstrap/scss/mixins/_screen-reader.scss",
+        "node_modules/bootstrap/scss/mixins/_size.scss",
+        "node_modules/bootstrap/scss/mixins/_reset-text.scss",
+        "node_modules/bootstrap/scss/mixins/_text-emphasis.scss",
+        "node_modules/bootstrap/scss/mixins/_text-hide.scss",
+        "node_modules/bootstrap/scss/mixins/_text-truncate.scss",
+        "node_modules/bootstrap/scss/mixins/_visibility.scss",
+        "node_modules/bootstrap/scss/mixins/_alert.scss",
+        "node_modules/bootstrap/scss/mixins/_buttons.scss",
+        "node_modules/bootstrap/scss/mixins/_caret.scss",
+        "node_modules/bootstrap/scss/mixins/_pagination.scss",
+        "node_modules/bootstrap/scss/mixins/_lists.scss",
+        "node_modules/bootstrap/scss/mixins/_list-group.scss",
+        "node_modules/bootstrap/scss/mixins/_nav-divider.scss",
+        "node_modules/bootstrap/scss/mixins/_forms.scss",
+        "node_modules/bootstrap/scss/mixins/_table-row.scss",
+        "node_modules/bootstrap/scss/mixins/_background-variant.scss",
+        "node_modules/bootstrap/scss/mixins/_border-radius.scss",
+        "node_modules/bootstrap/scss/mixins/_box-shadow.scss",
+        "node_modules/bootstrap/scss/mixins/_gradients.scss",
+        "node_modules/bootstrap/scss/mixins/_transition.scss",
+        "node_modules/bootstrap/scss/mixins/_clearfix.scss",
+        "node_modules/bootstrap/scss/mixins/_grid-framework.scss",
+        "node_modules/bootstrap/scss/mixins/_grid.scss",
+        "node_modules/bootstrap/scss/mixins/_float.scss"
       ]
     },
     {
