Added dedicated media SASS file

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1229,6 +1229,7 @@
         "src/css/components/_buttons.sass",
         "src/css/components/_inputs.sass",
         "src/css/components/_tags.sass",
+        "src/css/components/_media.sass",
         "src/css/pages/_page-about.sass",
         "src/css/pages/_page-contact.sass",
         "src/css/pages/_page-single.sass",
@@ -1466,7 +1467,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
