Updated config file

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1467,7 +1467,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -1597,7 +1597,7 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"autoCompile\":true,\"compiler-autoprefixer\":{\"enabled\":false},\"sourceMap\":false,\"compiler-sass\":{\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"},\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"less\",\"sass\",\"stylus\",\"scss\",\"styl\"],\"replaceSegmentsWith\":[\"css\"],\"relative\":\"\"},\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-minify-css\":{\"enabled\":false}}",
+  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"output\":{\"replaceSegments\":[\"less\",\"sass\",\"stylus\",\"scss\",\"styl\"]},\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"compiler-sass\":{\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}",
   "file-type-less": "{\"autoCompile\":true,\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"sourceMap\":false,\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"less\",\"sass\",\"stylus\",\"scss\",\"styl\"],\"replaceSegmentsWith\":[\"css\"],\"relative\":\"\"},\"compiler-less\":{\"enabled\":true}}",
   "autoprefixer": {
     "browsers": "last 4 versions"
