Updated frontpage, header and footer

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1159,7 +1159,15 @@
       "imports": [
         "src/css/_variables.sass",
         "src/css/_bootstrap.sass",
-        "node_modules/font-awesome/scss/font-awesome.scss",
+        "src/css/_font-awesome.sass",
+        "src/css/_typography.sass",
+        "src/css/_keyframes.sass",
+        "src/css/_container.sass",
+        "src/css/_navbar.sass",
+        "src/css/_social.sass",
+        "src/css/_header.sass",
+        "src/css/_footer.sass",
+        "src/css/_frontpage.sass",
         "node_modules/bootstrap/scss/_functions.scss",
         "node_modules/bootstrap/scss/_variables.scss",
         "node_modules/bootstrap/scss/_mixins.scss",
@@ -1197,19 +1205,20 @@
         "node_modules/bootstrap/scss/_spinners.scss",
         "node_modules/bootstrap/scss/_utilities.scss",
         "node_modules/bootstrap/scss/_print.scss",
-        "node_modules/font-awesome/scss/_variables.scss",
-        "node_modules/font-awesome/scss/_mixins.scss",
-        "node_modules/font-awesome/scss/_path.scss",
-        "node_modules/font-awesome/scss/_core.scss",
-        "node_modules/font-awesome/scss/_larger.scss",
-        "node_modules/font-awesome/scss/_fixed-width.scss",
-        "node_modules/font-awesome/scss/_list.scss",
-        "node_modules/font-awesome/scss/_bordered-pulled.scss",
-        "node_modules/font-awesome/scss/_animated.scss",
-        "node_modules/font-awesome/scss/_rotated-flipped.scss",
-        "node_modules/font-awesome/scss/_stacked.scss",
-        "node_modules/font-awesome/scss/_icons.scss",
-        "node_modules/font-awesome/scss/_screen-reader.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_variables.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_mixins.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_core.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_larger.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_fixed-width.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_list.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_bordered-pulled.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_animated.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_rotated-flipped.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_stacked.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_icons.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_screen-reader.scss",
         "node_modules/bootstrap/scss/mixins/_breakpoints.scss",
         "node_modules/bootstrap/scss/mixins/_hover.scss",
         "node_modules/bootstrap/scss/mixins/_image.scss",
@@ -1733,7 +1742,6 @@
     {
       "path": "src/js/javascript.js",
       "imports": [
-        "node_modules/jquery/dist/jquery.js",
         "src/js/jquery-header.js",
         "src/js/jquery-footer.js"
       ]
@@ -1777,7 +1785,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
