--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/corneliucirlan/ccwp#readme",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.3",
     "bootstrap": "^4.2.1",
-    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1"
   }
 }
