Updated blog section, portfolio page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1130,6 +1130,14 @@
     {
       "path": "src/css/layout/_old.sass",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-sass\":{\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}"
+    },
+    {
+      "path": "src/css/_tags.sass",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-sass\":{\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}"
+    },
+    {
+      "path": "src/css/_media.sass",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-sass\":{\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}"
     }
   ],
   "fileTree": {
@@ -1167,6 +1175,9 @@
         "src/css/_social.sass",
         "src/css/_header.sass",
         "src/css/_footer.sass",
+        "src/css/_card.sass",
+        "src/css/_tags.sass",
+        "src/css/_media.sass",
         "src/css/_frontpage.sass",
         "node_modules/bootstrap/scss/_functions.scss",
         "node_modules/bootstrap/scss/_variables.scss",
