Updated social icons & added support for multiple logos

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1077,7 +1077,7 @@
     },
     {
       "path": "src/css/wp-admin.sass",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"assets/css/wp-admin.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-sass\":{\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"assets/css/wp-admin.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-sass\":{\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}"
     },
     {
       "path": "vendor/abraham/twitteroauth/README.md",
@@ -1147,9 +1147,7 @@
       "src/js",
       "src/css/layout",
       "src",
-      "src/css",
-      "assets",
-      "assets/css"
+      "src/css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -1221,10 +1219,10 @@
         "node_modules/bootstrap/scss/_spinners.scss",
         "node_modules/bootstrap/scss/_utilities.scss",
         "node_modules/bootstrap/scss/_print.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_variables.scss",
         "node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
         "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
         "node_modules/@fortawesome/fontawesome-free/scss/regular.scss",
-        "node_modules/@fortawesome/fontawesome-free/scss/_variables.scss",
         "node_modules/@fortawesome/fontawesome-free/scss/_mixins.scss",
         "node_modules/@fortawesome/fontawesome-free/scss/_core.scss",
         "node_modules/@fortawesome/fontawesome-free/scss/_larger.scss",
@@ -1406,12 +1404,37 @@
       "path": "src/js/wp-admin.js",
       "imports": [
         "src/js/jquery-header.js",
+        "src/js/admin/social-media.js",
         "src/js/jquery-footer.js"
+      ]
+    },
+    {
+      "path": "src/css/wp-admin.sass",
+      "imports": [
+        "src/css/_variables.sass",
+        "node_modules/bootstrap/scss/_functions.scss",
+        "node_modules/bootstrap/scss/_variables.scss",
+        "src/css/_font-awesome.sass",
+        "node_modules/@fortawesome/fontawesome-free/scss/_variables.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/regular.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_mixins.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_core.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_larger.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_fixed-width.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_list.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_bordered-pulled.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_animated.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_rotated-flipped.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_stacked.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_icons.scss",
+        "node_modules/@fortawesome/fontawesome-free/scss/_screen-reader.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
