Updated page titles

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1165,6 +1165,7 @@
     {
       "path": "src/css/style.sass",
       "imports": [
+        "src/css/_404.sass",
         "src/css/_variables.sass",
         "src/css/_bootstrap.sass",
         "src/css/_font-awesome.sass",
