Added required fonts

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1138,6 +1138,10 @@
     {
       "path": "src/css/_media.sass",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compiler-sass\":{\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}"
+    },
+    {
+      "path": "src/css/_fonts.sass",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false},\"compiler-sass\":{\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}"
     }
   ],
   "fileTree": {
@@ -1169,6 +1173,7 @@
         "src/css/_variables.sass",
         "src/css/_bootstrap.sass",
         "src/css/_font-awesome.sass",
+        "src/css/_fonts.sass",
         "src/css/_typography.sass",
         "src/css/_keyframes.sass",
         "src/css/_mixins.sass",
@@ -1435,7 +1440,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
