Removed unmodified variables

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1440,7 +1440,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
