--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "autoload": {
         "psr-4":
             {
-                "ccwp\\": "./config"
+                "cornelius\\": "./config"
         }
     }
 }
